# ashwinvin

./: .gitignore  Procfile  README.md  pyproject.toml  quartz.config.ts  quartz.layout.ts
.githhub/workflows/: blog-post-workflow.yml
.github/workflows/: metrics.yml
content/: index.md
content/Books/: The Stranger.md  index.md
content/Knowledge/Lambda Calculus/: A Basic Intro.md
src/backend/app/: main.py
src/frontend/: base.html  index.html  macros.html  projects.html  style.css
